--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,5 @@ jobs:
           cp -r ./ /root/ros2_ws/src/mypkg
           cd /root/ros2_ws
           colcon build
-          source install/setup.bash
+          . install/setup.bash
           ./src/mypkg/test/test.bash /root
