--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,8 @@
   <description>practice package</description>
   <maintainer email="muuuuu2525@users.noreply.github.com">asano</maintainer>
   <license>Apache-2.0</license>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
