--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,19 +1,13 @@
 name: test
-
-[cite_start]on: push    # プッシュしたときに実行 
-
+on: push
 jobs:
   test:
     runs-on: ubuntu-22.04
-    [cite_start]container: ryuichiueda/ubuntu22.04-ros2:latest  # 講師用意のROS 2入りコンテナを使用 
-
+    container: ryuichiueda/ubuntu22.04-ros2:latest
     steps:
-      - [cite_start]uses: actions/checkout@v2  # リポジトリをチェックアウト 
-
+      - uses: actions/checkout@v2
       - name: build and test
         run: |
-          # リポジトリの内容をコンテナ内のワークスペースにコピー
           rsync -av ./ /root/ros2_ws/src/mypkg/
           cd /root/ros2_ws
-          # テストスクリプトを実行
           bash -xv ./src/mypkg/test/test.bash /root
